[gd_scene load_steps=4 format=3 uid="uid://b7novhig0f5m"]

[ext_resource type="Script" path="res://main.gd" id="1_hw8u0"]
[ext_resource type="PackedScene" uid="uid://3vdh745pvbsa" path="res://cursor.tscn" id="2_3tdco"]
[ext_resource type="PackedScene" uid="uid://bccd8l4qav5fc" path="res://stack.tscn" id="3_yjldg"]

[node name="Game" type="Node2D"]
script = ExtResource("1_hw8u0")

[node name="Main camera" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="Cursor" parent="." instance=ExtResource("2_3tdco")]
position = Vector2(-286, -161)

[node name="Stack" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(-182, -74)

[node name="Stack2" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(-130, -74)

[node name="Stack3" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(-78, -74)

[node name="Stack4" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(-26, -74)

[node name="Stack5" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(26, -74)

[node name="Stack6" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(78, -74)

[node name="Stack7" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(130, -74)

[node name="Stack8" parent="." instance=ExtResource("3_yjldg")]
position = Vector2(182, -74)
